--- a/pom.xml
+++ b/pom.xml
@@ -175,7 +175,35 @@
 	  <version>${org.springframework.version}</version>
 	  <scope>test</scope>
 	</dependency>
-  </dependencies>
+	<dependency>
+		<groupId>javax.servlet</groupId>
+		<artifactId>javax.servlet-api</artifactId>
+		<version>3.0.1</version>
+		<scope>provided</scope>
+		
+	</dependency>
+	<dependency>
+		<groupId>javax.servlet.jsp</groupId>
+		<artifactId>javax.servlet.jsp-api</artifactId>
+		<version>2.2.1</version>
+		<scope>provided</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.hibernate</groupId>
+		<artifactId>hibernate-entitymanager</artifactId>
+		<version>4.3.4.Final</version>
+	</dependency>
+	<dependency>
+        <groupId>org.springframework.data</groupId>
+        <artifactId>spring-data-jpa</artifactId>
+        <version>1.9.1.RELEASE</version>
+    </dependency>
+	<dependency>
+		<groupId>org.hsqldb</groupId>
+		<artifactId>hsqldb</artifactId>
+		<version>2.3.2</version>
+	</dependency>
+</dependencies>
   <build>
   <plugins>
   	<plugin>
