--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,21 @@
 <properties>
     <org.springframework.version>4.2.3.RELEASE</org.springframework.version>
     <apache.tiles>3.0.3</apache.tiles>
+    <spring.security.version>4.0.3.RELEASE</spring.security.version>
 </properties>
-<dependencies>	
+<dependencies>
+	
+		<dependency>
+		<groupId>org.springframework.security</groupId>
+		<artifactId>spring-security-web</artifactId>
+		<version>${spring.security.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>org.springframework.security</groupId>
+		<artifactId>spring-security-config</artifactId>
+		<version>${spring.security.version}</version>
+	</dependency>
+
 	<dependency>
 		<groupId>jstl</groupId>
 		<artifactId>jstl</artifactId>
